--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -3,4 +3,7 @@ spring.banner.image.location=vizsla.jpg
 #Internationalization
 spring.messages.basename=messages/messages
 
-#spring.profiles.active=jpa
+spring.profiles.active=jpa
+
+spring.datasource.generate-unique-name=false
+spring.h2.console.enabled=true
